@@ -81,7 +81,9 @@ let num_of_prim name =
   try
     find_numtable !c_prim_table name
   with Not_found ->
-    if !Clflags.custom_runtime || Config.host <> Config.target then
+    if !Clflags.custom_runtime || Config.host <> Config.target
+       || !Clflags.no_check_prims
+    then
       enter_numtable c_prim_table name
     else begin
       let symb =
